--- a/playground/play.ipynb
+++ b/playground/play.ipynb
@@ -76,20 +76,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "from docx import Document\n",
+    "# import re\n",
+    "# from docx import Document\n",
     "\n",
-    "def docx_replace_regex(doc_obj, regex , replace, a=False):\n",
+    "# def docx_replace_regex(doc_obj, regex , replace, a=False):\n",
     "\n",
-    "    for p in doc_obj.paragraphs:\n",
-    "        if regex.search(p.text):\n",
-    "            text = regex.sub(replace, p.text)\n",
-    "            p.text = text\n",
+    "#     for p in doc_obj.paragraphs:\n",
+    "#         if regex.search(p.text):\n",
+    "#             text = regex.sub(replace, p.text)\n",
+    "#             p.text = text\n",
     "\n",
-    "    for table in doc_obj.tables:\n",
-    "        for row in table.rows:\n",
-    "            for cell in row.cells:\n",
-    "                docx_replace_regex(cell, regex , replace, True)"
+    "#     for table in doc_obj.tables:\n",
+    "#         for row in table.rows:\n",
+    "#             for cell in row.cells:\n",
+    "#                 docx_replace_regex(cell, regex , replace, True)"
    ]
   },
   {
@@ -98,20 +98,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"D:\\Workplaces\\Python\\ComputerVision\\PdfAutoSign\\docs\\Cong van test VBNB giua 2 PB_LMH.docx\"\n",
-    "doc = Document(filename)\n",
+    "# filename = \"D:\\Workplaces\\Python\\ComputerVision\\PdfAutoSign\\docs\\Cong van test VBNB giua 2 PB_LMH.docx\"\n",
+    "# doc = Document(filename)\n",
     "\n",
-    "s1 = r\"Số:.{0,20}/\\w{2,10}\"\n",
-    "regex1 = re.compile(s1)\n",
-    "replace1 = \" \" * 10 + '\\n' + \" \" * 10\n",
-    "docx_replace_regex(doc, regex1 , replace1)\n",
+    "# s1 = r\"Số:.{0,20}/\\w{2,10}\"\n",
+    "# regex1 = re.compile(s1)\n",
+    "# replace1 = \" \" * 10 + '\\n' + \" \" * 10\n",
+    "# docx_replace_regex(doc, regex1 , replace1)\n",
     "\n",
-    "s2 = r\"Hà Nội.{0,10}ngày.{0,10}tháng.{0,10}năm\"\n",
-    "regex2 = re.compile(s2)\n",
-    "replace2 = \" \" * 10 + '\\n' + \" \" * 10\n",
-    "docx_replace_regex(doc, regex2 , replace2)\n",
+    "# s2 = r\"Hà Nội.{0,10}ngày.{0,10}tháng.{0,10}năm\"\n",
+    "# regex2 = re.compile(s2)\n",
+    "# replace2 = \" \" * 10 + '\\n' + \" \" * 10\n",
+    "# docx_replace_regex(doc, regex2 , replace2)\n",
     "\n",
-    "doc.save('file.docx')"
+    "# doc.save('file.docx')"
    ]
   },
   {
